refactor: Refactored utilities and added DeferredResult